--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,13 @@
-$primaryColor: #462c6c;
-$darkGrey: #676767;
-$grey: #d8d8d8;
+$primaryColor: #EF7B45;
+$secondaryColor: #36c5d6;
+$darkGrey: #c0c0c0;
+$grey: #f1f1f1;
 $lightGrey: #fafafa;
+$errorRed: #DA3C11;
+$cautionYellow: #d8b012;
+$warningOrange: #F1960C;
+$successGreen: #0CA915;
+
+$zIndexBump: 10;
+$zIndexHigh: 20;
+$zIndexSuper: 30;
